Trabajando con CSS

--- a/anuncios.html
+++ b/anuncios.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!--Cabecera y menús-->
         <a href="/">
         <img src="img/logo.svg" alt="">
         </a>
@@ -20,7 +21,54 @@
         </nav>
     </header>
     <!-- Fin cabecera y menús-->
-    
+    <!-- Cuerpo principal, casas y depas en venta-->
+    <main>
+        <h2>Casas y Depas en Venta</h2>
+        <div>
+            <img src="img/anuncio1.jpg" alt="">
+            <h4>Casa de Lujo en el Lago</h4>
+            <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+            <p>$ 3.000.000</p>
+            <a href="#">Ver Propiedad</a>
+        </div>
+        <div>
+            <img src="img/anuncio2.jpg" alt="">
+            <h4>Casa terminados de Lujo</h4>
+            <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
+            <p>$ 2.000.000</p>
+            <a href="#">Ver Propiedad</a>
+        </div>
+        <div>
+            <img src="img/anuncio3.jpg" alt="">
+            <h4>Casa con Alberca</h4>
+            <p>Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad</p>
+            <p>$ 3.000.000</p>
+            <a href="#">Ver Propiedad</a>
+        </div>
+        <div>
+            <img src="img/anuncio4.jpg" alt="">
+            <h4>Casa fuera de la Ciudad</h4>
+            <p>Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad</p>
+            <p>$ 3.000.000</p>
+            <a href="#">Ver Propiedad</a>
+        </div>
+        <div>
+            <img src="img/anuncio5.jpg" alt="">
+            <h4>Casa frente al bosque</h4>
+            <p>Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad</p>
+            <p>$ 3.000.000</p>
+            <a href="#">Ver Propiedad</a>
+        </div>
+        <div>
+            <img src="img/anuncio6.jpg" alt="">
+            <h4>Casa frente al bosque</h4>
+            <p>Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad</p>
+            <p>$ 3.000.000</p>
+            <a href="#">Ver Propiedad</a>
+        </div>
+    </main>
+
+    <!--Fin cuerpo principal-->
     <footer>
         <nav>
             <a href="nosotros.html">Nosotros</a>
