--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Inicio cabecera y memús-->
     <header>
         <a href="/">
         <img src="img/logo.svg" alt="">
@@ -21,6 +22,34 @@
     </header>
     <!-- Fin cabecera y menús-->
     
+    <section>
+        <h1>Nuestro Blog</h1>
+        <article>
+            <img src="img/blog1.jpg" alt="">
+            <h3>Terraza en el techo de tu casa</h3>
+            <p>Escrito el 20/10/2019 por: Admin</p>
+            <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero</p>
+        </article>
+        <article>
+            <img src="img/blog2.jpg" alt="">
+            <h3>Guía para la decoración de tu hogar</h3>
+            <p>Escrito el 20/10/2019 por: Admin</p>
+            <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+        </article>
+        <article>
+            <img src="img/blog1.jpg" alt="">
+            <h3>Terraza en el techo de tu casa</h3>
+            <p>Escrito el 20/10/2019 por: Admin</p>
+            <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+        </article>
+        <article>
+            <img src="img/blog2.jpg" alt="">
+            <h3>Guía para la decoración de tu hogar</h3>
+            <p>Escrito el 20/10/2019 por: Admin</p>
+            <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+        </article>
+    </section>
+    <!-- Inicio pie de página-->
     <footer>
         <nav>
             <a href="nosotros.html">Nosotros</a>
@@ -30,5 +59,7 @@
         </nav>
         <p>Todos los derechos reservados &copy;</p>
     </footer>
+
+    <!-- Fin pie de página-->
 </body>
 </html>
