--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Inicio cabecera y menús-->
     <header>
         <a href="/">
         <img src="img/logo.svg" alt="">
@@ -20,7 +21,11 @@
         </nav>
     </header>
     <!-- Fin cabecera y menús-->
-    
+    <!-- Inicio parte principal página contacto-->
+    <h1>Contacto</h1>
+    <img src="img/destacada3.jpg" alt="">
+    <!-- Fin parte principal página contacto-->
+    <!-- Inicio pie de página-->
     <footer>
         <nav>
             <a href="nosotros.html">Nosotros</a>
@@ -30,5 +35,6 @@
         </nav>
         <p>Todos los derechos reservados &copy;</p>
     </footer>
+    <!-- Fin pie de página-->
 </body>
 </html>
