--- a/anuncio.html
+++ b/anuncio.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Cabecera y menús-->
     <header>
         <a href="/">
         <img src="img/logo.svg" alt="">
@@ -21,6 +22,16 @@
     </header>
     <!-- Fin cabecera y menús-->
     
+    <!--Cuerpo principal anuncio-->
+    <main>
+        <h1>Casa en Venta en la Playa</h1>
+        <img src="img/destacada.jpg" alt="">
+        <p>$3,000,000</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
+    </main>
+    <!--Fin cuerpo principal anuncio-->
+    <!--Inicio pie de página-->
     <footer>
         <nav>
             <a href="nosotros.html">Nosotros</a>
@@ -30,5 +41,6 @@
         </nav>
         <p>Todos los derechos reservados &copy;</p>
     </footer>
+    <!--Fin pie de página-->
 </body>
 </html>
