--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 <body>
     <!--Cabecera y menús-->
     <header class="site-header inicio">
-        <a href="/">
-        <img src="img/logo.svg" alt="">
-        </a>
-        <nav>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
-        <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+        <div class="contenedor">
+            <div class="barra">
+                <a href="/">
+                <img src="img/logo.svg" alt="">
+                </a>
+                <nav>
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div><!-- barra-->
+            <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+        </div><!-- contenedor-->
     </header>
 
     <!-- Fin cabecera y menús-->
@@ -44,6 +48,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt doloribus, voluptatibus consequatur, corrupti ut tempora quidem assumenda aliquid et dolor neque non asperiores veritatis doloremque libero laborum quas dolores dolore.</p>
             </div>
         </section>
+
+        <!-- Cuerpo principal, casas y depas en venta-->
         <main>
             <h2>Casas y Depas en Venta</h2>
             <div>
@@ -69,6 +75,8 @@
             </div>
             <a href="#">Ver todas</a>
         </main>
+
+        <!--Fin cuerpo principal-->
 
         <section>
             <img src="img/encuentra.jpg" alt="">
