Trabajando con CSS

--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- Inicio cabecera y menús-->
     <header>
         <a href="/">
-        <img src="img/logo.svg" alt="">
+            <img src="img/logo.svg" alt="">
         </a>
-        <nav>
+        <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
@@ -37,4 +39,5 @@
     </footer>
     <!-- Fin pie de página-->
 </body>
+
 </html>
