--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Bienes Raices</title>
 </head>
+
 <body>
     <!--Cabecera y menús-->
     <header>
         <a href="/">
-        <img src="img/logo.svg" alt="">
+            <img src="img/logo.svg" alt="">
         </a>
-        <nav>
+        <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
@@ -21,11 +23,12 @@
         </nav>
     </header>
     <!-- Fin cabecera y menús-->
-    <h1>Conoce Sobre Nosotros</h1>  
+    <h1>Conoce Sobre Nosotros</h1>
 
     <img src="img/nosotros.jpg" alt="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aliquam porro saepe hic praesentium cumque magni tenetur. Natus at deleniti dolore quia blanditiis? Perferendis consequatur ipsa, veritatis modi qui sed.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque suscipit iure eos maiores voluptatibus labore illo incidunt deserunt veniam alias soluta dolores molestias quos in, cumque delectus reprehenderit placeat obcaecati?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur nobis molestiae laboriosam laborum dicta? Temporibus, eius deserunt expedita consequuntur aperiam iste ab cumque distinctio aspernatur laborum dicta delectus. Ipsam, quae!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque suscipit iure eos maiores voluptatibus labore illo incidunt deserunt veniam alias soluta dolores molestias quos in, cumque delectus reprehenderit placeat obcaecati?Lorem ipsum dolor sit
+        amet consectetur, adipisicing elit. Aspernatur nobis molestiae laboriosam laborum dicta? Temporibus, eius deserunt expedita consequuntur aperiam iste ab cumque distinctio aspernatur laborum dicta delectus. Ipsam, quae!</p>
 
     <h2>Más Sobre Nosotros</h2>
     <h3>Seguridad</h3>
