--- a/anuncio.html
+++ b/anuncio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Document</title>
 </head>
+
 <body>
     <!--Cabecera y menús-->
     <header>
         <a href="/">
-        <img src="img/logo.svg" alt="">
+            <img src="img/logo.svg" alt="">
         </a>
-        <nav>
+        <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
@@ -21,14 +23,16 @@
         </nav>
     </header>
     <!-- Fin cabecera y menús-->
-    
+
     <!--Cuerpo principal anuncio-->
     <main>
         <h1>Casa en Venta en la Playa</h1>
         <img src="img/destacada.jpg" alt="">
         <p>$3,000,000</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
     </main>
     <!--Fin cuerpo principal anuncio-->
     <!--Inicio pie de página-->
@@ -43,4 +47,5 @@
     </footer>
     <!--Fin pie de página-->
 </body>
+
 </html>
