--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- Inicio cabecera y memús-->
     <header>
         <a href="/">
-        <img src="img/logo.svg" alt="">
+            <img src="img/logo.svg" alt="">
         </a>
-        <nav>
+        <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
@@ -21,7 +23,7 @@
         </nav>
     </header>
     <!-- Fin cabecera y menús-->
-    
+
     <section>
         <h1>Nuestro Blog</h1>
         <article>
@@ -62,4 +64,5 @@
 
     <!-- Fin pie de página-->
 </body>
+
 </html>
