--- a/entrada.html
+++ b/entrada.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <a href="/">
-        <img src="img/logo.svg" alt="">
+            <img src="img/logo.svg" alt="">
         </a>
-        <nav>
+        <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
@@ -21,15 +23,17 @@
     </header>
     <!-- Fin cabecera y menús-->
 
-     <!--Cuerpo principal entrada-->
-     <main>
-            <h1>Consejos para Tener una Alberca en tu casa sin gastar</h1>
-            <img src="img/destacada.jpg" alt="">
-            <p>$3,000,000</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
-        </main>
-        <!--Fin cuerpo principal anuncio-->
+    <!--Cuerpo principal entrada-->
+    <main>
+        <h1>Consejos para Tener una Alberca en tu casa sin gastar</h1>
+        <img src="img/destacada.jpg" alt="">
+        <p>$3,000,000</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eveniet! Aut, ex sit! Voluptates, ut provident ex nostrum placeat quam magnam veniam reiciendis accusantium quibusdam libero, aspernatur ad voluptate distinctio. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Consequuntur voluptatibus laudantium voluptatem blanditiis, dolor velit eaque nam quae modi impedit tempora nesciunt, quasi inventore. Tempore beatae voluptates dolores velit perspiciatis?</p>
+    </main>
+    <!--Fin cuerpo principal anuncio-->
     <!-- Inicio pie de página-->
     <footer>
         <nav>
@@ -42,4 +46,5 @@
     </footer>
     <!-- Fin pie de página-->
 </body>
+
 </html>
