--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Bienes Raices</title>
 </head>
+
 <body>
     <!--Cabecera y menús-->
     <header class="site-header inicio">
         <div class="contenedor">
             <div class="barra">
                 <a href="/">
-                <img src="img/logo.svg" alt="">
+                    <img src="img/logo.svg" alt="">
                 </a>
-                <nav>
+                <nav class="navegacion">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
                     <a href="contacto.html">Contacto</a>
                 </nav>
-            </div><!-- barra-->
+            </div>
+            <!-- barra-->
             <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
-        </div><!-- contenedor-->
+        </div>
+        <!-- contenedor-->
     </header>
 
     <!-- Fin cabecera y menús-->
     <!-- Inicio parte principal de la página-->
     <section>
-        
+
         <section>
-        <h2>Más Sobre Nosotros</h2>   
+            <h2>Más Sobre Nosotros</h2>
             <div>
                 <img src="img/icono1.svg" alt="">
                 <h3>Seguridad</h3>
@@ -111,7 +117,7 @@
     <!-- Fin parte principal de la página -->
     <!-- Inicio pie de página-->
     <footer>
-        <nav>
+        <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="#">Anuncios</a>
             <a href="#">Blog</a>
@@ -121,4 +127,5 @@
     </footer>
     <!-- Fin pie de página-->
 </body>
+
 </html>
