Trabajando con CSS en Index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!--Cabecera y menús-->
     <header class="site-header inicio">
-        <div class="contenedor">
+        <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="/">
                     <img src="img/logo.svg" alt="">
@@ -33,25 +33,27 @@
     </header>
 
     <!-- Fin cabecera y menús-->
-    <!-- Inicio parte principal de la página-->
+    <!-- Inicio parte principal de la página -->
     <section>
 
-        <section>
-            <h2>Más Sobre Nosotros</h2>
-            <div>
-                <img src="img/icono1.svg" alt="">
-                <h3>Seguridad</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt doloribus, voluptatibus consequatur, corrupti ut tempora quidem assumenda aliquid et dolor neque non asperiores veritatis doloremque libero laborum quas dolores dolore.</p>
-            </div>
-            <div>
-                <img src="img/icono2.svg" alt="">
-                <h3>El mejor precio</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt doloribus, voluptatibus consequatur, corrupti ut tempora quidem assumenda aliquid et dolor neque non asperiores veritatis doloremque libero laborum quas dolores dolore.</p>
-            </div>
-            <div>
-                <img src="img/icono3.svg" alt="">
-                <h3>A tiempo</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt doloribus, voluptatibus consequatur, corrupti ut tempora quidem assumenda aliquid et dolor neque non asperiores veritatis doloremque libero laborum quas dolores dolore.</p>
+        <section class="contenedor seccion">
+            <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
+            <div class="sobre-nosotros">
+                <div class="icono">
+                    <img src="img/icono1.svg" alt="">
+                    <h3>Seguridad</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt doloribus, voluptatibus consequatur, corrupti ut tempora quidem assumenda aliquid et dolor neque non asperiores veritatis doloremque libero laborum quas dolores dolore.</p>
+                </div>
+                <div class="icono">
+                    <img src="img/icono2.svg" alt="">
+                    <h3>El mejor precio</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt doloribus, voluptatibus consequatur, corrupti ut tempora quidem assumenda aliquid et dolor neque non asperiores veritatis doloremque libero laborum quas dolores dolore.</p>
+                </div>
+                <div class="icono">
+                    <img src="img/icono3.svg" alt="">
+                    <h3>A tiempo</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt doloribus, voluptatibus consequatur, corrupti ut tempora quidem assumenda aliquid et dolor neque non asperiores veritatis doloremque libero laborum quas dolores dolore.</p>
+                </div>
             </div>
         </section>
 
