Trabajando aun con index

--- a/index.html
+++ b/index.html
@@ -58,28 +58,36 @@
         </section>
 
         <!-- Cuerpo principal, casas y depas en venta-->
-        <main>
-            <h2>Casas y Depas en Venta</h2>
-            <div>
-                <img src="img/anuncio1.jpg" alt="">
-                <h4>Casa de Lujo en el Lago</h4>
-                <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                <p>$ 3.000.000</p>
-                <a href="#">Ver Propiedad</a>
-            </div>
-            <div>
-                <img src="img/anuncio2.jpg" alt="">
-                <h4>Casa terminados de Lujo</h4>
-                <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
-                <p>$ 2.000.000</p>
-                <a href="#">Ver Propiedad</a>
-            </div>
-            <div>
-                <img src="img/anuncio3.jpg" alt="">
-                <h4>Casa con Alberca</h4>
-                <p>Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad</p>
-                <p>$ 3.000.000</p>
-                <a href="#">Ver Propiedad</a>
+        <main class="seccion contenedor">
+            <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
+            <div class="contenedor-anuncios">
+                <div class="anuncio">
+                    <img src="img/anuncio1.jpg" alt="">
+                    <div class="contenido-anuncio">
+                        <h4>Casa de Lujo en el Lago</h4>
+                        <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+                        <p>$ 3.000.000</p>
+                        <a href="#">Ver Propiedad</a>
+                    </div>
+                </div>
+                <div class="anuncio">
+                    <img src="img/anuncio2.jpg" alt="">
+                    <div class="contenido-anuncio">
+                        <h4>Casa terminados de Lujo</h4>
+                        <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
+                        <p>$ 2.000.000</p>
+                        <a href="#">Ver Propiedad</a>
+                    </div>
+                </div>
+                <div class="anuncio">
+                    <img src="img/anuncio3.jpg" alt="">
+                    <div class="contenido-anuncio">
+                        <h4>Casa con Alberca</h4>
+                        <p>Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad</p>
+                        <p>$ 3.000.000</p>
+                        <a href="#">Ver Propiedad</a>
+                    </div>
+                </div>
             </div>
             <a href="#">Ver todas</a>
         </main>
